src/components/shape-divider-control/editor.scss
body.maxi-blocks--active.maxi-blocks--accessibility .maxi-sidebar {
	.maxi-shapedividercontrol {
		&__shape-selector {
			&__display {
				border-color: var(--maxi-accessibility-grey-1-color);

				&:focus {
					border-color: var(--maxi-secondary-color);
					box-shadow: 0 0 0 1px var(--maxi-secondary-color);
					outline: 2px solid transparent;
				}
			}
		}
	}
}
.maxi-shapedividercontrol {
	&__shape-list {
		display: flex;
		flex-wrap: wrap;
		width: 271px;
		height: 300px;
		overflow-y: scroll;

		.maxi-button-group-control__option {
			width: 100%;

			&:focus,
			&--selected {
				border: none;
				background-color: var(--maxi-white-4-color) !important;
				box-shadow: none;
				outline: none;

				svg {
					fill: var(--maxi-secondary-color);
				}
			}
		}
	}
	&__shape-selector {
		width: 100%;
		margin-bottom: 8px;

		&__display {
			display: block;
			width: 100%;
			padding: 18px 0;
			border: 1px solid var(--maxi-grey-1-color);
			border-radius: 0;
			background-color: #fff;
			text-align: center;
			transition: all 0.5s;
			cursor: pointer;

			&:hover {
				border-color: var(--maxi-grey-6-color);
			}
		}
	}
}

